--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>404 Serlock</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    
+<body style="background-color: rgb(235, 236, 238);">
+    <main>
+        <div>
+            <img src="serlokas.png" alt="serlokas" height="#" width="#">
+        </div>
+        <div>
+            <h1>404</h1>
+            <p>Looks like this page is missing. Don't worry tho. Our best man is on the case.</p>
+            <p>Meanwhile, why don't try again by going</p>
+            <a href="#">BACK HOME</a>
+        </div>
+    </main>
 </body>
 </html>
